--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,11 @@
    background-color: #202124;
    font-family: 'Karla', sans-serif;
    color: #F9F9F9;
-   width: 96vw;
-   margin: 0 auto;
+}
+
+.container {
+   padding-left: 2rem;
+   padding-right: 2rem;
+   border-bottom: 3px solid hsl(329, 90%, 50%);
+   box-sizing: border-box;
 }
