--- a/css/header/header.css
+++ b/css/header/header.css
@@ -1,8 +1,8 @@
 .header {
    display: flex;
    justify-content: space-between;
-   align-items: flex-end;
-   height: 72px;
+   align-items: center;
+   height: 80px;
 }
 
 .header_logo {
